--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2680,107 +2680,107 @@ stories:
   domain: http://www.tulsaworld.com/
   link: https://www.tulsaworld.com/trade-deadline-looms-as-baseball-resumes-after-break/image_2eda76c3-b6ad-5278-b823-e2c736717e21.html
 images:
-- name: lincoln-memorial-lincolnmemorial-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-green-zuma.jpg
-- name: white-house-whitehouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-pablo-blue.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-- name: downtheline-downtheline-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-purple-storm.jpg
-- name: blossombar-crafty-painting-file-00-00-50-25.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: gypsymosaic-gypsy-eyes-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
-- name: oldsmallboat-oldsmallboat-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purp-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-monet-one.jpg
-- name: downtheline-downtheline-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-nazi-poster.jpg
-- name: yosemite-yosemite-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-rainbow-festival.jpg
-- name: supreme-court-supremecourt-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-three.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-missle.png
-- name: nazi-invasion-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0062.jpg
-- name: machine-road-machine-road-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-dream.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-- name: border-crossing-bordercrossing-light-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-light-dali.png
-- name: statue-of-liberty-front-view-statueofliberty-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-constitution.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
-- name: bordercrossing-bordercrossing-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
-- name: oldcabin-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
-- name: miamibeach-miamibeach-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-oily-mcoilface.jpg
-- name: aws-s3-blossombar-blossombar-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colored-circuits.jpg
-- name: old-granary-field-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
-- name: bluelake-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
-- name: sand-hand-sand-hand-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
-- name: blossombar-deep-connections-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-24-99.jpg
-- name: art-museum-art-museum-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-graham-sutherland.jpg
-- name: walled-garden-walled-garden-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: mosaic-face-mosaic-face-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-deep-connections.jpg
-- name: losangelescloudyday-los-angeles-downtown-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up.jpg
-- name: rain-princess-IMG_8336.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8336.jpg
-- name: sand-hand-sand-hand-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-bright-sand.jpg
-- name: miamibeach-miamibeach-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
-- name: catacombs-catacombs-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-wav-pr.jpg
-- name: white-house-whitehouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-hot-spicy.jpg
-- name: ellis-island-ellisisland-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
-- name: stories-containership-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-deep-connections.jpg
-- name: abandonedbuildings_colored_circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colored_circuits.jpg
-- name: amusement-park-amusement-park-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-oily-mcoilface.jpg
-- name: white-house-whitehouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
-- name: dc-statue-dcstatue-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crabapple.jpg
-- name: paris-paris-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
-- name: udnie-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6180010.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-- name: paris-paris-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
+- name: store-on-corner-store-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
+- name: walled-garden-walled-garden-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-brush.jpg
+- name: yuma-bank-yuma-bak-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-bright-sand.jpg
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
+- name: oldhouse-oldhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
+- name: aws-s3-blossombar-blossombar-still-600.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: adam-smith-adam-smith-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: fence-mexico-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-granite.jpg
+- name: oldcabin-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-two.jpg
+- name: old-door-lock-old-door-lock-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-bright-sand.jpg
+- name: old-house-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-hot-spicy.jpg
+- name: dragon-desert-desert-dragon-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-plentiful.jpg
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: powerlines-power-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
+- name: old-door-lock-old-door-lock-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-deep-connections.jpg
+- name: hollywood-building-hollywood-building-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-pond.jpg
+- name: border-crossing-bordercrossing-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
+- name: cannon-wall-satan.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-wall-satan.jpg
+- name: fence-mexico-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
+- name: bluelake-dry-skin-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-01-17-38.jpg
+- name: abandonedbuildings_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_three.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colorful-blocks.jpg
+- name: oldsmallboat-oldsmallboat-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
+- name: aws-s3-stories-algo-microservices.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
+- name: ellis-island-ellisisland-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-internet-numbers.jpg
+- name: server-cloud-server-racks-door-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dry-skin.jpg
+- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+- name: white-house-lawn-white-house-window-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-deep-connections.jpg
+- name: birdhouse-birdhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-plentiful.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-4.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+- name: los-angeles-from-observatory-losangeles-from-observatory-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-internet-numbers.jpg
+- name: fence-fence-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-collage.jpg
+- name: beach-rocks-beach-rocks-currents-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-matrix.jpg
+- name: aws-s3-desertrun-desertrun-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-2560.jpg
+- name: school-clouds-church-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
+- name: stories-G0520270-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
+- name: server-cloud-server-racks-door-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
+- name: carry-load-carryload-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
+- name: downtown-trucksilo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
+- name: white-house-lawn-white-house-lawn-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-gred-mash.jpg
+- name: razorcliff-razorcliff-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-dali.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still.jpg
+- name: castle-wall-DSC-0067-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alien-goggles.JPG
+- name: razorwire-DSC-0080-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-oily-mcoilface.jpg
+- name: udnie-P2150007.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P2150007.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-hot-spicy.JPG
 ---
 Aftershocks Continue In California Desert.&nbsp;Toby Mac Concert Set For Sunday.&nbsp;Powell Signals That Rate Cut Could Be Coming Soon.&nbsp;Facing Calls For Resignation, Acosta Defends Epstein Deal.&nbsp;Jerome Township To Add Third Monthly Meeting.&nbsp;Police Ask For Help Identifying Theft Suspect.&nbsp;Be Aware Of brown Water Today.&nbsp;Tigers Drop Conference Opener Vs Burns.&nbsp;
